# ProjectOneOld

./: .gitignore  CHANGELOG.md  Cargo.toml  NPMINSTALL_TO_LOCK  README.md  build.gradle  c.js  commonbuild.gradle  component.gradle  config.gradle  empty.txt  gradle.properties  help.js  index.js  key.properties  modulebuild.gradle  new.js  package-lock.json  package.json  plan.md  process.md  publishversion.gradle  rename.kt  settings.gradle  structure.md  tsconfig.json  version.gradle
android/: build.gradle
annotation/: build.gradle
app/: build.gradle  consumer-rules.pro
applib/: README.md  build.gradle
apptest/: build.gradle
bluetooth/: build.gradle
buildCom/: Deps  androidversion.gradle  commonbuild.gradle  commonbuildktx.gradle  fileversion.gradle  gitversion.gradle  gitversion.md  publish.gradle  publishversion.gradle  version.gradle
buildSrc/: build.gradle.kts
common/: build.gradle
common_base/: build.gradle
derver-builder/: Cargo.toml
derver-builder/src/: fun.rs  lib.rs
derver-enum/: Cargo.toml
dev/: build.gradle
glideimageload/: build.gradle
gradle/: commonbuild.gradle  commonbuildktx.gradle  gitversion.gradle  version.gradle
imageload/: build.gradle
key/: key.properties  lib.jks  p1.jks  test.jks
launcher/: build.gradle
lib/: App02-发布到仓库.md  build.gradle  proguard-rules.pro
libApp/: build.gradle
libExpand/: build.gradle
libNative/: README.md  build.gradle
libandroid/: build.gradle
libbluetooth/: build.gradle
libextend/: build.gradle
libfast/: README.md  build.gradle
libimage/: build.gradle
libimageglide/: build.gradle
liblogcompat/: build.gradle
libnative/: build.gradle
libpre/: README.md  build.gradle  proguard-rules.pro
libresultcompat/: build.gradle
librust/: Cargo.toml
librust/src/: lib.rs  macros.rs  slog.rs
librust/src/net/: proxy.rs
librust/src/str/: mod.rs
librust/src/win/: dir.rs  mod.rs  reg.rs
libtest/: Cargo.toml  build.gradle
maven/: maven.gradle
moduleMain/: build.gradle
moduleSet/: build.gradle
module_main/: build.gradle
modulebluetooth/: build.gradle
modulerxjava/: build.gradle
moduletemplate/: build.gradle  git.gradle
moduletest/: build.gradle
moduletestcompat/: build.gradle
p1/: build.gradle  consumer-rules.pro
record/: build.gradle
src/: lib.rs  (+9 more)
(+2231 files in other folders)
