[package]
edition = "2021"
name = "liblib"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 此库不能引用其它本地库

log = {version = "0.4", optional = true}

lazy_static = {version = "1.4", optional = true}

# serde = {version = "1.0", features = ["derive"], optional = true}
# serde_json = {version = "1.0", optional = true}
# serde_repr = {version = "0.1", optional = true}
# serde_with = "2.1"

windows-sys = {version = "0.42", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_Globalization", "Win32_System_Registry"], optional = true}

[features]
# 默认启用
# default = ["log", "lazy_static"]
# # 可选
win = ["windows-sys"]

default = ["log", "lazy_static", "windows-sys"]
