[package]
name = "derver_builder"
version = "0.1.0"
autotests = false
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/test_builder.rs"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
